deploy/openshift/quay-enterprise-config-route.yaml
---
apiVersion: v1
kind: Route
metadata:
  name: quay-enterprise-config
  namespace: quay-enterprise
spec:
  to:
    kind: Service
    name: quay-enterprise-config
  tls:
    termination: passthrough
